@@ -95,7 +95,7 @@ public class BurnTokensV3Test {
 		var processed = this.engine.execute(List.of(burnTxn));
 
 		// Assert
-		var accounting = REResourceAccounting.compute(processed.get(0).getGroupedStateUpdates().get(0));
+		var accounting = REResourceAccounting.compute(processed.getFirst().get(0).getGroupedStateUpdates().get(0));
 		assertThat(accounting.resourceAccounting())
 			.hasSize(1)
 			.containsEntry(tokenAddr, BigInteger.valueOf(-10));
