@@ -153,7 +153,7 @@ public class StakeTokensTest {
 		var transfer = this.engine.construct(new StakeTokens(accountAddr, key.getPublicKey(), stakeAmt))
 			.signAndBuild(key::sign);
 		var processed = this.engine.execute(List.of(transfer));
-		var accounting = REResourceAccounting.compute(processed.get(0).getGroupedStateUpdates().get(0));
+		var accounting = REResourceAccounting.compute(processed.getFirst().get(0).getGroupedStateUpdates().get(0));
 		assertThat(accounting.bucketAccounting())
 			.hasSize(2)
 			.containsEntry(
