@@ -148,7 +148,7 @@ public class TransferTokensTest {
 		var processed = this.engine.execute(List.of(transfer));
 
 		// Assert
-		var accounting = REResourceAccounting.compute(processed.get(0).getGroupedStateUpdates().get(0));
+		var accounting = REResourceAccounting.compute(processed.getFirst().get(0).getGroupedStateUpdates().get(0));
 		assertThat(accounting.bucketAccounting())
 			.hasSize(2)
 			.containsEntry(
